2005-10-12  Beth Dakin  <bdakin@apple.com>

        Reviewed by Hyatt

	Fix for <rdar://problem/4112378> CSS :hover:after crash - khtml::inlineWidth
	RenderFlows needed to destroy all of their children within RenderFlow. This
	used to happen only in RenderFlow's parent class, RenderContainer. But for
	some children to be completely destroyed, the parent flow still needs to be
	around. Specifically in the case when there is generated content and a line
	break, which maintained a stray reference to the destroyed RenderObject through 
	the lineBreakObj() of a RootInlineBox. 

        * khtml/rendering/render_container.cpp: 
        (RenderContainer::destroy): Took the destruction of children out of destroy(),
				moved to new function, and only call function when m_first
				is still around.
        (RenderContainer::destroyChildren): New function for destruction of children.
        * khtml/rendering/render_container.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::destroy): Call RenderContainer::destroyChildren() at the beginning.

2005-10-11  Darin Adler  <darin@apple.com>

        Reviewed by Eric.

        Crash: Drag element with CSS ::Before absolute positioning applied to it
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4088

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::khtmlMouseMoveEvent):

2005-10-11  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        workaround for <rdar://problem/4294625> to fix our build
        
        * kwq/KWQPointArray.h:
        * kwq/KWQSize.h:

2005-10-10  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by eric
        
        <rdar://problem/4283218> M-JPEG / Server Push and JavaScript
        
        Ignore multipart loads in numRequests, call checkCompleted() after each section is complete.

        * khtml/misc/loader.cpp:
        
2005-10-11  Adele Peterson  <adele@apple.com>
